working on mobile footer, resolved right margin

--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,6 @@ h1 {
   background-size: cover;
   background-repeat: no-repeat;
   float: none;
-  margin: 0;
-  padding: 0;
 }
 
 .adoptables-transparency {
@@ -68,8 +66,6 @@ h1 {
   background-size: cover;
   background-repeat: no-repeat;
   float: none;
-  margin: 0;
-  padding: 0;
 }
 
 .about-transparency {
@@ -102,8 +98,6 @@ h1 {
   background-size: cover;
   background-repeat: no-repeat;
   float: none;
-  margin: 0;
-  padding: 0;
 }
 
 .home-transparency {
@@ -120,8 +114,6 @@ h1 {
   background-size: cover;
   background-repeat: no-repeat;
   float: none;
-  margin: 0;
-  padding: 0;
 }
 
 /* ///////////////////////////////////////////////////////////////////////////////////////COLUMNS///////////////////////////////
@@ -138,6 +130,7 @@ h1 {
   width: 25%;
   background-color: #c0e4f4;
   padding-left: 20px;
+  margin: 0;
 }
 
 /* Clear floats after the columns */
@@ -154,13 +147,14 @@ h1 {
 .nav {
   display: flex;
   background: white;
-  width: 100%;
+  font-family: "Tajawal", sans-serif;
+  width: auto;
   height: 100px;
   align-content: center;
   margin-top: 20px;
   margin-left: 250px;
+  margin-right: 0;
   margin-bottom: 50px;
-  width: 100%;
 }
 .mobile-nav {
   display: none;
@@ -544,12 +538,21 @@ Fake image .fakeimg {
 
 /* Add a card effect for articles */
 
-
-
 /* ///////////////////////////////////////////////////////////////////////////////////////LUKEE || FOOTER/////////////////////////////////////////////////////////////////////////////////////////// */
 /* Footer */
 /* Create four equal columns that floats next to each other */
-.column {
+
+.footer-column-1 {
+  float: left;
+  width: 25%;
+  padding: 15px;
+  padding-top: 25px;
+  color: rgb(245, 243, 238);
+  background-color: black;
+  padding-bottom: 35px;
+  margin-bottom: 0px;
+}
+.footer-column {
   float: left;
   width: 25%;
   padding: 15px;
@@ -560,7 +563,7 @@ Fake image .fakeimg {
   margin-bottom: 0px;
 }
 a:hover {
-  color: blue;
+  color: #066577;
 }
 .social1 {
   float: left;
@@ -573,23 +576,23 @@ a:hover {
   padding-bottom: 35.4px;
   margin-bottom: 0px;
 }
-.social1 a{
+.social1 a {
   padding-left: 5px;
 }
-.row2 {
+/* .row2 {
   padding-bottom: 30px;
   height: 5px;
   background-color: rgb(7, 7, 10);
   clear: both;
-}
+} */
 
 /* Clear floats after the columns */
-.row2:after {
+/* .row2:after {
   content: "";
   display: table;
   clear: both;
   background-color: rgb(10, 7, 7);
-}
+} */
 
 /* ///////////////////////////////////////////////////////////////////////////////Home css////////////////////////////////////////////// */
 .home-rightcolumn {
@@ -599,24 +602,22 @@ a:hover {
   width: 25%;
   margin-top: 5px;
 }
-.puppy-button img{
+.puppy-button img {
   float: left;
   position: fixed;
   clear: both;
 }
-.card3{
+.card3 {
   height: 100%;
   width: 100%;
   line-height: 100px;
   margin-top: 50px;
- 
 }
 .flex-containerhome {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 150px;
- 
 }
 
 .flex-containerhome > div {
@@ -625,29 +626,27 @@ a:hover {
   width: 100%;
   height: 100%;
   text-align: center;
-
-  
 }
-.flex-containerhome img{
+.flex-containerhome img {
   justify-content: center;
   margin-left: 500px;
   margin-top: 25px;
 }
-.puppy img{
-margin-left: 400px;
+.puppy img {
+  margin-left: 400px;
 }
 .test > p {
   text-align: center;
-  font-family: 'Indie Flower', cursive;
+  font-family: "Indie Flower", cursive;
   font-size: 20px;
-  color: #a41360;;
+  color: #a41360;
 }
 .profile {
   position: relative;
 }
-.home-imgoverlay{
+.home-imgoverlay {
   position: absolute;
-  padding:15px;
+  padding: 15px;
   top: 0;
   bottom: 0;
   left: 0;
@@ -683,7 +682,7 @@ margin-left: 400px;
 }
 #home-title-text {
   text-align: center;
-  font-family: 'Caveat', cursive;
+  font-family: "Caveat", cursive;
 }
 
 .flex-containerhome3 {
@@ -694,8 +693,7 @@ margin-left: 400px;
   background-color: #df1f86;
   color: white;
   margin-top: 15px;
-  
-} 
+}
 
 .flex-containerhome3 > div {
   background-color: #df1f86;
@@ -704,9 +702,7 @@ margin-left: 400px;
   height: 5px;
   text-align: center;
   margin-right: 400px;
-
 }
-
 
 /* //////////////////////////////////////////////////////////////////////////////////////LUKEE || PAY CSS/////////////////////////////////////////////////////////////////////////////////////////// */
 
